# TodoApp

./: .gitignore  docker-compose.yml
backend/: api.py  conda_env.yml  db_utils.py  pyproject.toml
backend/models/: models.py
backend/src/: api.py
backend/src/todo_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/test/: test.py
frontend/: .eslintcache  package.json
frontend/src/: App.js  Nav.js  TaskDetail.js  TaskForm.js  Tasks.js
